@@ -5,6 +5,8 @@ import com.blamejared.crafttweaker.api.action.recipe.ActionAddRecipe;
 import com.blamejared.crafttweaker.api.annotation.ZenRegister;
 import com.blamejared.crafttweaker.api.ingredient.IIngredient;
 import com.blamejared.crafttweaker.api.recipe.manager.base.IRecipeManager;
+import com.buuz135.industrial.module.ModuleCore;
+import com.buuz135.industrial.recipe.CrusherRecipe;
 import com.buuz135.industrial.recipe.LaserDrillOreRecipe;
 import com.buuz135.industrial.recipe.LaserDrillRarity;
 import mrthomas20121.foregoing_tweaker.laser_drill.LaserDrillRarityInterface;
@@ -20,12 +22,12 @@ public class LaserDrillRecipeManager implements IRecipeManager<LaserDrillOreReci
 
     @ZenCodeType.Method
     public void addRecipe(String name, IIngredient output, IIngredient lens, LaserDrillRarityInterface...rarities) {
-        LaserDrillRarity[] laserDrillRarities = Arrays.stream(rarities).map(LaserDrillRarityInterface::getInternal).collect(Collectors.toList()).toArray(new LaserDrillRarity[] {});
-        CraftTweakerAPI.apply(new ActionAddRecipe(this, new LaserDrillOreRecipe(name, output.asVanillaIngredient(), lens.asVanillaIngredient(), null, laserDrillRarities), ""));
+        LaserDrillRarity[] laserDrillRarities = Arrays.stream(rarities).map(LaserDrillRarityInterface::getInternal).toList().toArray(new LaserDrillRarity[] {});
+        CraftTweakerAPI.apply(new ActionAddRecipe<>(this, new LaserDrillOreRecipe(name, output.asVanillaIngredient(), lens.asVanillaIngredient(), null, laserDrillRarities), ""));
     }
 
     @Override
     public RecipeType<LaserDrillOreRecipe> getRecipeType() {
-        return LaserDrillOreRecipe.SERIALIZER.getRecipeType();
+        return (RecipeType<LaserDrillOreRecipe>) ModuleCore.LASER_DRILL_TYPE.get();
     }
 }
